--- a/Unity.Entities.Editor.csproj
+++ b/Unity.Entities.Editor.csproj
@@ -11,10 +11,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{387AC22C-C658-80AB-9C98-F8AC5082FD64}</ProjectGuid>
+    <ProjectGuid>{273D30D3-84D9-E3DD-ED79-D29C0B35D4FA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>Unity.Entities.Editor</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -28,7 +28,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,7 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <NoConfig>true</NoConfig>
@@ -62,63 +62,63 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Editor\ProcessModel.cs" />
-    <Reference Include="UnityEditor.TestRunner">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEditor.TestRunner.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.TestRunner">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEngine.TestRunner.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Burst">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Burst.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VSCode.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Jobs">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Jobs.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Jobs.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Jobs.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Burst.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Burst.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Physics">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Physics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Rendering.Hybrid">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Rendering.Hybrid.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Physics.Hybrid">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Physics.Hybrid.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Rider.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
-    </Reference>
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\AssemblyInfo.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\CommonGUI\EntityQueryGUI.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\CommonGUI\EntityQueryGUIControl.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\CommonGUI\GUIHelpers.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\CommonGUI\GUIStyleAsset.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\CommonGUI\RepaintLimiter.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\CommonGUI\SystemInclusionList.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\ComponentSystemProcessing.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\Editors\ComponentDataProxyBaseEditor.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\Editors\DynamicBufferProxyBaseEditor.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\Editors\GameObjectEntityEditor.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\ChunkInfoListView.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\ComponentTypeChooser.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\ComponentTypeFilterUI.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\ComponentTypeListView.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\EntityArrayListAdapter.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\EntityDebugger.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\EntityDebuggerStyles.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\EntityListQuery.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\EntityListView.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\EntityQueryListView.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\SystemListView.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityDebugger\WorldPopup.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityInspector\Adapters\IMGUIAdapter.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityInspector\Adapters\IMGUIMathematicsAdapter.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityInspector\Adapters\IMGUIPrimitivesAdapter.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityInspector\EntityIMGUIVisitor.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityInspector\EntitySelectionProxy.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\EntityInspector\EntitySelectionProxyEditor.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\ExtraTypesProvider.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\PropertyDrawers\LayerFieldDrawer.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\PropertyDrawers\WrappedComponentDataDrawer.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\ScriptTemplates\ScriptTemplates.cs" />
+    <None Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\ScriptTemplates\AuthoringComponent.txt" />
+    <None Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\Unity.Entities.Editor.asmdef" />
+    <None Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\ScriptTemplates\RunTimeComponent.txt" />
+    <None Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.Editor\ScriptTemplates\System.txt" />
     <Reference Include="Unity.Mathematics">
       <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Properties">
       <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Properties.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Physics.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Physics.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.2D.Sprite.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
       <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Mathematics.Editor">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.UI">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+    <Reference Include="UnityEditor.TestRunner">
+      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEditor.TestRunner.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TestRunner">
+      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEngine.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/2019.2.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -680,77 +680,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp.csproj">
-      <Project>{4F4579B2-A4D7-3DB0-79A1-9E3D45589605}</Project>
-      <Name>Assembly-CSharp</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.Properties.csproj">
-      <Project>{CAF937EE-4CC8-9BC2-367D-95A161F934E8}</Project>
-      <Name>Unity.Entities.Properties</Name>
-    </ProjectReference>
-    <ProjectReference Include="FootStone.TankShared.csproj">
-      <Project>{DCF8A6D9-0F13-707F-B15D-F1430D615E0B}</Project>
-      <Name>FootStone.TankShared</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.Editor.csproj">
-      <Project>{273D30D3-84D9-E3DD-ED79-D29C0B35D4FA}</Project>
-      <Name>Unity.Entities.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.StaticTypeRegistry.csproj">
-      <Project>{58C9B702-675B-BD80-F86E-AA2182C6CC31}</Project>
-      <Name>Unity.Entities.StaticTypeRegistry</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Collections.csproj">
-      <Project>{297F0C3C-FBCC-9A83-69C0-0953F48D7E1C}</Project>
-      <Name>Unity.Collections</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Scenes.Hybrid.csproj">
-      <Project>{ABBCB58F-4BB4-7543-51BE-274DFCA23644}</Project>
-      <Name>Unity.Scenes.Hybrid</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Scenes.Editor.csproj">
-      <Project>{BF06B645-AFCE-46C4-659F-93F4883975B4}</Project>
-      <Name>Unity.Scenes.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="FootStone.KcpTransport.csproj">
-      <Project>{25AC7E56-6F16-5C30-AEF1-53D657C82ECA}</Project>
-      <Name>FootStone.KcpTransport</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.Extensions.csproj">
-      <Project>{0D9335FA-8041-9F02-8A4E-DC17281BC211}</Project>
-      <Name>Unity.Mathematics.Extensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.Extensions.Hybrid.csproj">
-      <Project>{1DD1E6E0-A373-068B-800F-9AE5B27711D0}</Project>
-      <Name>Unity.Mathematics.Extensions.Hybrid</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.BuildUtils.csproj">
-      <Project>{F0E85311-29E4-E8B7-09F8-964135ADBEE9}</Project>
-      <Name>Unity.Entities.BuildUtils</Name>
+    <ProjectReference Include="Unity.Entities.csproj">
+      <Project>{B3BCD86E-8A6C-E73A-EA89-955E250C803E}</Project>
+      <Name>Unity.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Entities.Hybrid.csproj">
       <Project>{4D49641D-B8F8-F44A-36DC-909465AFAC79}</Project>
       <Name>Unity.Entities.Hybrid</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.Entities.csproj">
-      <Project>{B3BCD86E-8A6C-E73A-EA89-955E250C803E}</Project>
-      <Name>Unity.Entities</Name>
+    <ProjectReference Include="Unity.Entities.Properties.csproj">
+      <Project>{CAF937EE-4CC8-9BC2-367D-95A161F934E8}</Project>
+      <Name>Unity.Entities.Properties</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.Transforms.csproj">
-      <Project>{05C8809E-6D48-7539-E191-6AD9E92AEFBE}</Project>
-      <Name>Unity.Transforms</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Transforms.Editor.csproj">
-      <Project>{91D97459-9B68-4B17-5CA5-C313321AC070}</Project>
-      <Name>Unity.Transforms.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Networking.Transport.csproj">
-      <Project>{4E55D8D2-1C09-4CD3-FA51-93EE51D5AD39}</Project>
-      <Name>Unity.Networking.Transport</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Transforms.Hybrid.csproj">
-      <Project>{8BF910A2-E44F-C46C-124D-361D4E17CF2A}</Project>
-      <Name>Unity.Transforms.Hybrid</Name>
+    <ProjectReference Include="Unity.Collections.csproj">
+      <Project>{297F0C3C-FBCC-9A83-69C0-0953F48D7E1C}</Project>
+      <Name>Unity.Collections</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
