--- a/Unity.Entities.StaticTypeRegistry.csproj
+++ b/Unity.Entities.StaticTypeRegistry.csproj
@@ -11,10 +11,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{DCF8A6D9-0F13-707F-B15D-F1430D615E0B}</ProjectGuid>
+    <ProjectGuid>{58C9B702-675B-BD80-F86E-AA2182C6CC31}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>FootStone.TankShared</AssemblyName>
+    <AssemblyName>Unity.Entities.StaticTypeRegistry</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -62,86 +62,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Behaviour\CheckVisibleBehaviour.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Behaviour\EntitySender.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Behaviour\EntityTracker.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Behaviour\SpawnEnemyBehaviour.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Behaviour\SpawnPlayerBehaviour.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Behaviour\TimeToKill.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Battle\Attack.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Battle\Damage.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Battle\Fire.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Battle\Health.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Connection.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Entity\Enemy.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Entity\Player.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Entity\Rocket.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Lifecycle\Despawn.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Lifecycle\SpawnEnemy.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Move\MoveForward.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Move\MovePosition.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Move\MoveSin.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Move\MoveTarget.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Move\MoveTranslation.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\PlayerCommand.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Presetation\Explosion.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Presetation\UpdateUI.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\Score.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Components\World\Snapshot.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Core\ConfigVars.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Core\GameDebug.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Core\GameStatistics.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Core\LevelManager.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Core\SimpleBundleManager.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Entity\FSComponentSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Entity\GameTick.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Entity\GameWorld.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Main\ClientGameLoop.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Main\Game.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Main\GameConfiguration.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Main\GameNetworkEvents.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Main\PlayerSettings.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Main\ServerGameLoop.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\HuffmanInputStream.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\HuffmanOutputStream.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\IInputStream.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\IOutputStream.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionCapture.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionConstants.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionModel.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionUtils.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\RawInputStream.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\RawOutputStream.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\ConversionUtility.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkCommon.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkReader.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkSchema.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkUtils.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkWriter.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\StringExtensionMethods.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\DespawnSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\FireSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\MoveForwardSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\MovePositionSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\MoveSinSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\MoveTargetSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\MoveTranslationSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\RayCastSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\WorldTimeSystem.cs" />
-    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\SpawnEntityUtil.cs" />
-    <None Include="Packages\com.footstone.tankshared\FootStone.TankShared\FootStone.TankShared.asmdef" />
-    <Reference Include="Unity.Burst">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Burst.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Mathematics">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Physics">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Physics.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Physics.Hybrid">
-      <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/Unity.Physics.Hybrid.dll</HintPath>
-    </Reference>
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.StaticTypeRegistry\AssemblyInfo.cs" />
+    <Compile Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.StaticTypeRegistry\StaticTypeRegistry.cs" />
+    <None Include="Packages\com.unity.entities@0.1.1-preview\Unity.Entities.StaticTypeRegistry\Unity.Entities.StaticTypeRegistry.asmdef" />
     <Reference Include="UnityEditor.UI">
       <HintPath>D:/work/ECS/TankDemo/Server/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
@@ -697,48 +620,6 @@
     <Reference Include="System.Xml.Serialization">
       <HintPath>C:/Program Files/Unity/2019.2.0f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="Unity.Entities.csproj">
-      <Project>{B3BCD86E-8A6C-E73A-EA89-955E250C803E}</Project>
-      <Name>Unity.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.Hybrid.csproj">
-      <Project>{4D49641D-B8F8-F44A-36DC-909465AFAC79}</Project>
-      <Name>Unity.Entities.Hybrid</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.Properties.csproj">
-      <Project>{CAF937EE-4CC8-9BC2-367D-95A161F934E8}</Project>
-      <Name>Unity.Entities.Properties</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Entities.StaticTypeRegistry.csproj">
-      <Project>{58C9B702-675B-BD80-F86E-AA2182C6CC31}</Project>
-      <Name>Unity.Entities.StaticTypeRegistry</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Collections.csproj">
-      <Project>{297F0C3C-FBCC-9A83-69C0-0953F48D7E1C}</Project>
-      <Name>Unity.Collections</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.Extensions.csproj">
-      <Project>{0D9335FA-8041-9F02-8A4E-DC17281BC211}</Project>
-      <Name>Unity.Mathematics.Extensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Transforms.csproj">
-      <Project>{05C8809E-6D48-7539-E191-6AD9E92AEFBE}</Project>
-      <Name>Unity.Transforms</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Transforms.Hybrid.csproj">
-      <Project>{8BF910A2-E44F-C46C-124D-361D4E17CF2A}</Project>
-      <Name>Unity.Transforms.Hybrid</Name>
-    </ProjectReference>
-    <ProjectReference Include="FootStone.KcpTransport.csproj">
-      <Project>{25AC7E56-6F16-5C30-AEF1-53D657C82ECA}</Project>
-      <Name>FootStone.KcpTransport</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Networking.Transport.csproj">
-      <Project>{4E55D8D2-1C09-4CD3-FA51-93EE51D5AD39}</Project>
-      <Name>Unity.Networking.Transport</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
